Implement IDE suggestions